--- a/projectsite/requirements.txt
+++ b/projectsite/requirements.txt
@@ -1,8 +1,8 @@
 asgiref==3.8.1
 Django==5.0.6
+django-widget-tweaks==1.5.0
 Faker==25.8.0
 python-dateutil==2.9.0.post0
 six==1.16.0
 sqlparse==0.5.0
 tzdata==2024.1
-typing_extensions==4.10.0
